--- a/add-product/src/main/resources/application.properties
+++ b/add-product/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 file.upload-dir=uploads/products
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/product
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
