convert mvc+servlet into springboot

--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,10 @@
 		<relativePath />
 	</parent>
 
-	<groupId>com.mvc.ecom</groupId>
+	<groupId>com.suryacart.product</groupId>
 	<artifactId>suryaCart-product-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<name>suryaCart-product-service</name>
 	<description>Spring Boot e-commerce add product module</description>
@@ -56,6 +56,15 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
@@ -63,7 +72,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>mvc-ecom</finalName>
+		<finalName>surya-cart</finalName>
 		<plugins>
 
 			<!-- Spring Boot Plugin -->
